--- a/package.json
+++ b/package.json
@@ -13,5 +13,5 @@
   "author": "Solange Gueiros <solangegueiros@gmail.com> (https://solange.dev)",
   "license": "MIT",
   "repository": "github:solangegueiros/syntropy",
-  "bugs": "https://github.com/solangegueiros/syntropy/issues",  
+  "bugs": "https://github.com/solangegueiros/syntropy/issues"  
 }
